--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -541,12 +541,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## goalscores.csv"
+    "## shootouts.csv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1967-08-22</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>Taiwan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1971-11-14</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>Vietnam Republic</td>\n",
+       "      <td>South Korea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1972-05-07</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>Iraq</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1972-05-17</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>South Korea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1972-05-19</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Cambodia</td>\n",
+       "      <td>Thailand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1973-04-21</td>\n",
+       "      <td>Senegal</td>\n",
+       "      <td>Ghana</td>\n",
+       "      <td>Ghana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1973-06-14</td>\n",
+       "      <td>Guinea</td>\n",
+       "      <td>Mali</td>\n",
+       "      <td>Guinea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1973-06-14</td>\n",
+       "      <td>Mauritius</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>Mauritius</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1973-07-26</td>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>Kuwait</td>\n",
+       "      <td>Malaysia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1973-07-26</td>\n",
+       "      <td>Cambodia</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1973-07-27</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Thailand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1973-07-28</td>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>Myanmar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1973-08-09</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Vietnam Republic</td>\n",
+       "      <td>Vietnam Republic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1973-08-23</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Syria</td>\n",
+       "      <td>Syria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1973-08-25</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>Algeria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date    home_team         away_team            winner\n",
+       "0   1967-08-22        India            Taiwan            Taiwan\n",
+       "1   1971-11-14  South Korea  Vietnam Republic       South Korea\n",
+       "2   1972-05-07  South Korea              Iraq              Iraq\n",
+       "3   1972-05-17     Thailand       South Korea       South Korea\n",
+       "4   1972-05-19     Thailand          Cambodia          Thailand\n",
+       "5   1973-04-21      Senegal             Ghana             Ghana\n",
+       "6   1973-06-14       Guinea              Mali            Guinea\n",
+       "7   1973-06-14    Mauritius          Tanzania         Mauritius\n",
+       "8   1973-07-26     Malaysia            Kuwait          Malaysia\n",
+       "9   1973-07-26     Cambodia         Singapore         Singapore\n",
+       "10  1973-07-27   Bangladesh          Thailand          Thailand\n",
+       "11  1973-07-28      Myanmar       South Korea           Myanmar\n",
+       "12  1973-08-09        India  Vietnam Republic  Vietnam Republic\n",
+       "13  1973-08-23      Algeria             Syria             Syria\n",
+       "14  1973-08-25      Algeria              Iraq           Algeria"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shootouts.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## goalscores.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +839,7 @@
        "4     False    False  1916  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +942,7 @@
        "0  1992.095787    1.739278    1.178401  0.560877  0.248603"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +1010,7 @@
        "0  1999.0         1.0         1.0       0.0      0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +1091,7 @@
        "0  Kuala Lumpur  United States    False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -999,7 +1176,7 @@
        "0  24.62302    1.747263    1.393775  2.381203  0.432208"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1244,7 @@
        "0  606.293096    3.052926    1.942609  5.670126  0.186804"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1260,7 @@
    "source": [
     "### **Boxplots**\n",
     "\n",
-    "**Observação:** Nos gráficos que analisam as variáves `home_score`, `away_score` e `goal_dif`, os valores cujo módulo fosse acima de 8 foram simplificados para facilitar a comparação"
+    "**Observation:** In the graphs that analyze the `home_score`, `away_score` and `goal_dif` variables, the values whose modulus was above 8 were simplified to facilitate the comparison."
    ]
   },
   {
@@ -1095,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -1250,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1472,7 @@
        "0  50.019166  0.017509  0.065475"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1536,7 @@
        "0    51.0       0.0      0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1608,7 @@
        "0    Brazil   Uruguay  Brazil  Cristiano Ronaldo    90.0     False    False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1512,7 +1689,7 @@
        "0  26.360859  0.131159  0.247365"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1753,7 @@
        "0  694.894894  0.017203  0.06119"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1915,7 @@
        "1        Zambia       NaN        NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2512,7 @@
        "[316 rows x 153 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2395,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2699,7 @@
        "265  Switzerland  1933.229967"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2844,7 @@
        "238                    San Marino   871.085715"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
