docs: language change
Changing texts from English to Portuguese

--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "QgqTHx2_hg76"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "VCR3ie0kdNJd"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "5UyVtf88hS0F"
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -861,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "id": "W5EjjrwydNJg"
@@ -958,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1344,13 +1344,13 @@
         "id": "btthrLwhqwCe"
       },
       "source": [
-        "# **Gráfico de Dispersão**"
+        "# **Scatter plot**"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Separando a história em intervalos de tempo marcados por grandes eventos de 1916 até os dias atuais(da tabela *goalscorers*)"
+        "#Separating history into time intervals marked by major events from 1916 to the present day (from the *goalscorers* table)"
       ],
       "metadata": {
         "id": "NF_XEv_DhWxl"
@@ -1365,7 +1365,7 @@
       "metadata": {
         "id": "up5DZl6ZeX9e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1373,15 +1373,15 @@
       "source": [
         "#1916-1919:\n",
         "\n",
-        "Revolta da Páscoa na Irlanda\n",
+        "Easter Rising in Ireland\n",
         "\n",
-        "Entrada dos Estados Unidos na Primeira Guerra Mundial\n",
+        "Entry of the United States into World War I\n",
         "\n",
-        "Revolução Russa\n",
+        "Russian revolution\n",
         "\n",
-        "Fim da Primeira Guerra Mundial\n",
+        "End of World War I\n",
         "\n",
-        "Tratado de Versalhes"
+        "Treaty of Versailles"
       ],
       "metadata": {
         "id": "S3NvbFmhhmA-"
@@ -1404,7 +1404,7 @@
         "id": "iNKCWXjjgoc9",
         "outputId": "57266058-09a0-4254-aca7-6be4b4c6e3d9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,15 +1433,15 @@
       "source": [
         "#1920-1945:\n",
         "\n",
-        "Quebra da Bolsa de Nova York e início da Grande Depressão\n",
+        "New York stock market crash and onset of the Great Depression\n",
         "\n",
-        "Adolf Hitler é nomeado chanceler da Alemanha\n",
+        "Adolf Hitler is appointed Chancellor of Germany\n",
         "\n",
-        "Início da Segunda Guerra Mundial\n",
+        "Beginning of World War II\n",
         "\n",
-        "Ataque japonês a Pearl Harbor\n",
+        "Japanese attack on Pearl Harbor\n",
         "\n",
-        "Fim da Segunda Guerra Mundial e criação da Organização das Nações Unidas (ONU)"
+        "End of World War II and creation of the United Nations (UN)"
       ],
       "metadata": {
         "id": "0lmVO7_miND4"
@@ -1464,7 +1464,7 @@
         "id": "dwNc0MLoiUtg",
         "outputId": "d742da9b-91c1-4536-b20d-4b454d79a463"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1493,15 +1493,15 @@
       "source": [
         "#1946-1955:\n",
         "\n",
-        "Plano Marshall\n",
+        "marshall plan\n",
         "\n",
-        "Criação da República Popular da China\n",
+        "Creation of the People's Republic of China\n",
         "\n",
-        "Início da Guerra da Coreia\n",
+        "Beginning of the Korean War\n",
         "\n",
-        "Fim da Guerra da Coreia\n",
+        "End of the Korean War\n",
         "\n",
-        "Conferência de Bandung"
+        "bandung conference"
       ],
       "metadata": {
         "id": "UddtWNr9jDpd"
@@ -1524,7 +1524,7 @@
         "id": "AR9p9gCDjXDA",
         "outputId": "a9166ebf-5a2e-4cf7-b638-f26bafeb4f4d"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1553,13 +1553,13 @@
       "source": [
         "#1956-1964:\n",
         "\n",
-        "Início da construção do Muro de Berlim\n",
+        "Construction of the Berlin Wall begins\n",
         "\n",
-        "Crise dos mísseis em Cuba\n",
+        "Cuban Missile Crisis\n",
         "\n",
-        "Assassinato de John F. Kennedy\n",
+        "Assassination of John F. Kennedy\n",
         "\n",
-        "Golpe militar no Brasil"
+        "Military coup in Brazil"
       ],
       "metadata": {
         "id": "Qn8Od3vgjwu6"
@@ -1582,7 +1582,7 @@
         "id": "SMTlGoV2j6MB",
         "outputId": "ad214ade-93cb-4ac1-adb3-a8adf9f3f0a9"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1611,11 +1611,11 @@
       "source": [
         "#1965-1975:\n",
         "\n",
-        "Guerra do Vietnã\n",
+        "Vietnam War\n",
         "\n",
-        "Movimentos pelos direitos civis nos Estados Unidos\n",
+        "Civil rights movements in the United States\n",
         "\n",
-        "Revolução Cultural na China"
+        "Cultural Revolution in China"
       ],
       "metadata": {
         "id": "Mz17eMsykUZl"
@@ -1638,7 +1638,7 @@
         "id": "cFcqx9kckcMW",
         "outputId": "fa4ddcd9-bf1f-4429-973d-329e125d4939"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1667,13 +1667,13 @@
       "source": [
         "#1976-1991:\n",
         "\n",
-        "Revolução Islâmica no Irã\n",
+        "Islamic Revolution in Iran\n",
         "\n",
-        "Guerra Fria atinge o auge\n",
+        "Cold War peaks\n",
         "\n",
-        "Queda do Muro de Berlim\n",
+        "Fall of the Berlin Wall\n",
         "\n",
-        "Dissolução da União Soviética"
+        "Dissolution of the Soviet Union"
       ],
       "metadata": {
         "id": "IK2Hih1gkw96"
@@ -1696,7 +1696,7 @@
         "id": "XHMFni83k3Ax",
         "outputId": "d67b4f9e-0a59-45cb-9442-5e5a7963a9f3"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1725,13 +1725,13 @@
       "source": [
         "#1992-2003:\n",
         "\n",
-        "Genocídio em Ruanda\n",
+        "Genocide in Rwanda\n",
         "\n",
-        "Acordos de Oslo para o Oriente Médio\n",
+        "Oslo Accords for the Middle East\n",
         "\n",
-        "Atentados terroristas em Nova York e Washington D.C. em 11 de setembro de 2001\n",
+        "Terrorist attacks in New York and Washington D.C. on September 11, 2001\n",
         "\n",
-        "Guerra no Iraque"
+        "War in iraq"
       ],
       "metadata": {
         "id": "9a_Aq-UzlEoZ"
@@ -1754,7 +1754,7 @@
         "id": "1fI00TPNlNJt",
         "outputId": "eb54b44b-ee8d-4338-ee1c-b847d24bad1f"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1784,9 +1784,9 @@
         "#2004-2012:\n",
         "\n",
         "\n",
-        "Eleições presidenciais dos Estados Unidos em 2008\n",
+        "2008 United States Presidential Elections\n",
         "\n",
-        "Primavera Árabe"
+        "Arab Spring"
       ],
       "metadata": {
         "id": "uaZu_5z8lgAp"
@@ -1809,7 +1809,7 @@
         "id": "wp_UYhd7lniI",
         "outputId": "092724d2-2a8f-4465-ee27-4efae97c7dce"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1836,7 +1836,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Gráfico de dispersão entre as variáveis *home_score* e *away_score* em relação a *total_goals*(Tabela *results*)"
+        "# Scatter plot between variables *home_score* and *away_score* in relation to *total_goals*(Table *results*)"
       ],
       "metadata": {
         "id": "A_L_iqKz30Od"
@@ -1857,7 +1857,7 @@
         "id": "kuRqmvPT4TES",
         "outputId": "ba6750f1-60df-4b97-fb21-f7ab49bde887"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
