Correction of misspelling

--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -32,7 +32,7 @@
     "5. What are the best teams historically?\n",
     "6. What is the performance of teams in official matches?\n",
     "\n",
-    "After some tought, the questions became:\n",
+    "After some thought, the questions became:\n",
     "1. What is the penalty goal rate per year?\n",
     "2. What is the goal rate per year?\n",
     "3. What is the rate of goals scored per minute of the match?\n",
